<resources>
    <string name="app_name">G.O.D</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="loginstring">LOG IN</string>
    <string name="logoutstring">LOG OUT</string>
    <string name="rememberemailpw">是否記住信箱</string>
    <string name="title_activity_menutest">Menutest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="alarmstat">開啟狀態</string>
    <string name="alarmtype">事件種類</string>
    <string name="alarmstat_off">OFF</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_alarm">生活提醒</string>
    <string name="title_activity_functionroom">Gospel Of Dog</string>
    <string name="error_location_provider">錯誤嗎</string>

    <string name="add_reminder">提醒內容</string>
    <string name="details">Details</string>
    <string name="date">日期</string>
    <string name="time">時間</string>
    <string name="repeat">重複</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">重複週期</string>
    <string name="repeat_type">週期種類</string>

    <string name="action_discard_reminder">提醒已關閉</string>
    <string name="action_save_reminder">提醒已儲存</string>

    <string name="no_reminders">點擊加號來新建新的提醒</string>


    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>


    <declare-styleable name="LoadingView">
        <attr name="loading_renderer">
            <enum name="CollisionLoadingRenderer" value="7" />
        </attr>
    </declare-styleable>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
