
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"
        app:theme="@style/NoAppTheme6"
        android:background="@color/alarm_Primary"
        app:titleTextColor="@color/titlecolor"
        />

    <LinearLayout
        android:id="@+id/add_reminder_layout_top"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/alarm_Primary"
        android:orientation="vertical"

        >

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="16dp"
            android:gravity="center|left"
            android:hint="@string/add_reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@android:color/white"
            android:textColorHint="#A6FFFFFF"
            android:textSize="25dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/abc_secondary_text_material_dark"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/alarmtype"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="selectAlarmtype">

                <ImageView
                    android:id="@+id/alarmtype_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_settings" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/alarmtype_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/alarmtype_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarmtype"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_alarmtype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/alarmstat"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/alarmstat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_alarm_openstat" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/alarmstat_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/alarmstat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarmstat"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_alarmstat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

                <Switch
                    android:id="@+id/alarmstat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:onClick="onSwitchAlarmstat"
                    android:textOff="Off"
                    android:textOn="On" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setDate"
                android:id="@+id/date"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_view_day_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/date_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_text"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_date"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_access_time_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/time_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_text"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_time"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/repeat"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_sync_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="On"
                    android:textOff="Off"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatNo"
                android:clickable="true"
                android:onClick="setRepeatNo"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_unfold_more_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_no_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_no"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatType"
                android:clickable="true"
                android:onClick="selectRepeatType"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_subject_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_type_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_type"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/toolbar_dropshadow" />

    <ImageView
        android:id="@+id/rem_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/alarmdog" />

    <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
        <!--android:id="@+id/starred2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginTop="148dp"-->
        <!--android:clickable="false"-->
        <!--app:fab_size="normal"-->
        <!--fab:fab_colorNormal="@color/accent"-->
        <!--fab:fab_colorPressed="@color/fab_pressed"-->
        <!--fab:fab_icon="@drawable/ic_notifications_on_white_24dp"-->
        <!--tools:visibility="visible" />-->

</RelativeLayout>
